  and not -l as supposed. This may have caused desyncs
- #0003368 patched by Stealth giving users access to do /module on remote
  servers
- #0002533 reported by Dodge_Ram, patched by WolfSage, regarding notices
  not being sent when /*line and /shun are used to request stats
- Now using #0003028, with more intelligent accept() handling. The IRCd
  will now attempt to accept() up to LISTEN_SIZE (possibly saving CPU
  through this under load, and speeding up connection).
- IRCd now also sets the &me fd as being non blocking (wasn't before, that
  was odd..)
- #0003139 reported by vonitsanet, improving error messages on /connect
  when trying to /connect to a server with wildcards (* and ?) in the link
  block. We also raise an error if link::options::autoconnect is used
  together with wildcards in hostname.
- #0002040 reported by aquanight, removing dependancy on +l for +L. This
  will be backwards compatible as well, SJOIN doesn't care (TM) and mode
  doesn't either in case of a server sending it. So this will be just a
  client protocol modification. 
- Fixed SVSKILL sending an illegal QUIT
- #0003216 patched by djGrrr, regarding when you run ./Config for a second
  time after settings are saved in config.settings, the SSLDIR and ZIPLINKSDIR
  defaults are basically completely ignored.
- #0002420 reported by KnuX fixed by WolfSage
- #0003147 reported by vonitsanet, fixed by djGrrr regarding making
  spamfilters work in case of /setname
- Added oper CIDR
- #0001317 reported by thilo regarding removal of (username) being
  appended to topics set by U:Lined servers, patched by WolfSage
- #0003382 reported by stealth regarding nested C-style comments messing
  up example.conf parsing
- #0003092 reported by tabrisnet, patched by WolfSage, regarding
  documentation says
  link::bind-ip is optional, but not specifying it produces an error
- #0003232 reported by vonitsanet patched by djGrr, regarding /map is not
  shown u:lined servers to local opers and /links does