@@ -37,6 +37,7 @@ Computing Center and Jarkko Oikarinen";
 #ifndef _WIN32
 #include <sys/file.h>
 #include <pwd.h>
+#include <grp.h>
 #include <sys/time.h>
 #else
 #include <io.h>
@@ -96,6 +97,8 @@ extern MODVAR aMotd *rules;
 extern MODVAR aMotd *botmotd;
 extern MODVAR aMotd *smotd;
 MODVAR MemoryInfo StatsZ;
+uid_t irc_uid = 0;
+gid_t irc_gid = 0; 
 
 int  R_do_dns, R_fin_dns, R_fin_dnsc, R_fail_dns, R_do_id, R_fin_id, R_fail_id;
 
@@ -918,6 +921,8 @@ int InitwIRCD(int argc, char *argv[])
 	uid_t uid, euid;
 	gid_t gid, egid;
 	TS   delay = 0;
+	struct passwd *pw;
+	struct group *gr;
 #endif
 #ifdef HAVE_PSTAT
 	union pstun pstats;
@@ -1415,7 +1420,7 @@ int InitwIRCD(int argc, char *argv[])
 	R_fin_id = strlen(REPORT_FIN_ID);
 	R_fail_id = strlen(REPORT_FAIL_ID);
 
-#if !defined(IRC_UID) && !defined(_WIN32)
+#if !defined(IRC_USER) && !defined(_WIN32)
 	if ((uid != euid) && !euid) {
 		(void)fprintf(stderr,
 		    "ERROR: do not run ircd setuid root. Make it setuid a normal user.\n");
@@ -1423,12 +1428,24 @@ int InitwIRCD(int argc, char *argv[])
 	}
 #endif
 
-#if defined(IRC_UID) && defined(IRC_GID)
+#if defined(IRC_USER) && defined(IRC_GROUP)
 	if ((int)getuid() == 0) {
-		if ((IRC_UID == 0) || (IRC_GID == 0)) {
+
+		pw = getpwnam(IRC_USER);
+		gr = getgrnam(IRC_GROUP);
+
+		if ((pw == NULL) || (gr == NULL)) {
+			fprintf(stderr, "ERROR: Unable to change to specified user or group: %s\n", strerror(errno));
+			exit(-1);
+		} else {
+			irc_uid = pw->pw_uid;
+			irc_gid = gr->gr_gid;
+		}
+
+		if ((irc_uid == 0) || (irc_gid == 0)) {
 			(void)fprintf(stderr,
 			    "ERROR: SETUID and SETGID have not been set properly"
-			    "\nPlease read your documentation\n(HINT: IRC_UID and IRC_GID in include/config.h can not be 0)\n");
+			    "\nPlease read your documentation\n(HINT: IRC_USER and IRC_GROUP in include/config.h cannot be root/wheel)\n");
 			exit(-1);
 		} else {
 			/*
@@ -1436,14 +1453,14 @@ int InitwIRCD(int argc, char *argv[])
 			 */
 
 			(void)fprintf(stderr, "WARNING: ircd invoked as root\n");
-			(void)fprintf(stderr, "         changing to uid %d\n", IRC_UID);
-			(void)fprintf(stderr, "         changing to gid %d\n", IRC_GID);
-			if (setgid(IRC_GID))
+			(void)fprintf(stderr, "         changing to uid %d\n", irc_uid);
+			(void)fprintf(stderr, "         changing to gid %d\n", irc_gid);
+			if (setgid(irc_gid))
 			{
 				fprintf(stderr, "ERROR: Unable to change group: %s\n", strerror(errno));
 				exit(-1);
 			}
-			if (setuid(IRC_UID))
+			if (setuid(irc_uid))
 			{
 				fprintf(stderr, "ERROR: Unable to change userid: %s\n", strerror(errno));
 				exit(-1);
